data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3605.wast
;; 4. **Test Function Import Mismatch**:    - **Description**: Define a function import with a mismatch in type signature and then call it.    - **Constraint**: Ensure that the implementation validates the type signatures of imported functions correctly.    - **Relation to CFG**: If the CFG treats imported functions inaccurately, it can lead to incorrect control flow.

(assert_invalid
  (module
    (import "env" "imported_func" (func $imported_func (param i32) (result i32)))
    (func $type-mismatch-call (call $imported_func (i32.const 0) (i32.const 1)))
  )
  "type mismatch"
)